# quantum_ml

./: .gitignore  README.md  Testing.ipynb  Testing.py  examples.ipynb  examples.py  pyproject.toml  setup.py  update_env.bat
.github/workflows/: publish-to-test-pypi.yml  runtests.yml
quantum_ml/: metrics.py
quantumtools/: metrics.py
tests/: test_metrics.py
