[tool.poetry]
name = "quantumtools"
version = "0.1.2"
description = ""
authors = ["Stanley Wang <s.wang4331@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "quantum_ml"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
scikit-learn = "^1.0.0"
matplotlib = "^3.1.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.1"
pytest = "^6.0.0"
poetry2setup = "^1.1.0"
jupyter_contrib_nbextensions = "*"
jupyter_nbextensions_configurator = "*"
jupytext = "*"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
